added a Selection-bar that allows you to select notes. Have not added functionality yet.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
     </main>
+    <div id="select-bar"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
