--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <button id="new-button">New</button>
+      <button id="del-button">Delete</button>
       <button id="clear-button">Clear</button>
     </header>
     <main>
